Fix icon alignment in buttons

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -180,5 +180,4 @@
 
 .btn.icon:before {
   line-height: inherit;
-  vertical-align: top;
 }
